syntax = "proto3";

package NAPS2.Remoting.Worker;

import "Remoting/Error.proto";
import "Remoting/Progress.proto";
import "Serialization/SerializedImage.proto";

service WorkerService {
	rpc Init (InitRequest) returns (InitResponse) {}
	rpc Wia10NativeUi (Wia10NativeUiRequest) returns (Wia10NativeUiResponse) {}
	rpc TwainGetDeviceList (TwainGetDeviceListRequest) returns (TwainGetDeviceListResponse) {}
	rpc TwainScan (TwainScanRequest) returns (stream TwainScanResponse) {}
	rpc SendMapiEmail (SendMapiEmailRequest) returns (SendMapiEmailResponse) {}
	rpc RenderThumbnail (RenderThumbnailRequest) returns (RenderThumbnailResponse) {}
	rpc Scan (ScanRequest) returns (stream ScanResponse) {}
	rpc GetDeviceList (GetDeviceListRequest) returns (GetDeviceListResponse) {}
}

message InitRequest {
	string recoveryFolderPath = 1;
}

message InitResponse {
	NAPS2.Remoting.Error error = 1;
}

message Wia10NativeUiRequest {
	string deviceId = 1;
	fixed64 hwnd = 2;
}

message Wia10NativeUiResponse {
	NAPS2.Remoting.Error error = 1;
	string wiaConfigurationXml = 2;
}

message TwainGetDeviceListRequest {
	string twainImpl = 1;
}

message TwainGetDeviceListResponse {
	NAPS2.Remoting.Error error = 1;
	string deviceListXml = 2;
}

message TwainScanRequest {
	string scanDeviceXml = 1;
	string scanProfileXml = 2;
	string scanParamsXml = 3;
	fixed64 hwnd = 4;
}

message TwainScanResponse {
	NAPS2.Remoting.Error error = 1;
	NAPS2.Serialization.SerializedImage image = 2;
}

message GetDeviceListRequest {
	string optionsXml = 1;
}

message GetDeviceListResponse {
	NAPS2.Remoting.Error error = 1;
	string deviceListXml = 2;
}

message ScanRequest {
	string optionsXml = 1;
}

message ScanResponse {
	NAPS2.Remoting.Error error = 1;
	NAPS2.Serialization.SerializedImage image = 2;
	NAPS2.Remoting.Progress progress = 3;
}

message SendMapiEmailRequest {
	string emailMessageXml = 1;
}

message SendMapiEmailResponse {
	NAPS2.Remoting.Error error = 1;
	string returnCodeXml = 2;
}

message RenderThumbnailRequest {
	NAPS2.Serialization.SerializedImage image = 1;
	int32 size = 2;
}

message RenderThumbnailResponse {
	NAPS2.Remoting.Error error = 1;
	bytes thumbnail = 2;
}
