syntax = "proto3";

package NAPS2.Serialization;

message SerializedImage {
	bool transferOwnership = 1;
	oneof image {
		string filePath = 2;
		bytes fileContent = 3;
	}
	string metadataXml = 4;
	bytes thumbnail = 5;
	string renderedFilePath = 6;
}
